tests/baselines/reference/unknownSymbols1.errors.txt
==== tests/cases/compiler/unknownSymbols1.ts (13 errors) ====
    var x = asdf;
            ~~~~
!!! unknownSymbols1.ts(1,9): error TS2095: Could not find symbol 'asdf'.
    var y: asdf;
           ~~~~
!!! unknownSymbols1.ts(2,8): error TS2095: Could not find symbol 'asdf'.
    
    function foo(x: asdf, y: number): asdf { }
                    ~~~~
!!! unknownSymbols1.ts(4,17): error TS2095: Could not find symbol 'asdf'.
                                      ~~~~
!!! unknownSymbols1.ts(4,35): error TS2095: Could not find symbol 'asdf'.
    function foo2() {
        return asdf;
               ~~~~
!!! unknownSymbols1.ts(6,12): error TS2095: Could not find symbol 'asdf'.
    }
    
    var z = <asdf>x; // should be an error
             ~~~~
!!! unknownSymbols1.ts(9,10): error TS2095: Could not find symbol 'asdf'.
    
    class C<T> {
        foo: asdf;
             ~~~~
!!! unknownSymbols1.ts(12,10): error TS2095: Could not find symbol 'asdf'.
        bar: C<asdf>;
               ~~~~
!!! unknownSymbols1.ts(13,12): error TS2095: Could not find symbol 'asdf'.
    }
    
    class C2 implements asdf { }
                        ~~~~
!!! unknownSymbols1.ts(16,21): error TS2095: Could not find symbol 'asdf'.
    interface I extends adsf { }
                        ~~~~
!!! unknownSymbols1.ts(17,21): error TS2095: Could not find symbol 'adsf'.
    
    class C3 { constructor(x: any) { } }
    class C4 extends C3 {
        constructor() {
            super(asdf);
                  ~~~~
!!! unknownSymbols1.ts(22,15): error TS2095: Could not find symbol 'asdf'.
        }
    }
    
    var x2 = this.asdf; // no error, this is any
    
    class C5 {
        constructor() {
            this.asdf = asdf;
                 ~~~~
!!! unknownSymbols1.ts(30,14): error TS2094: The property 'asdf' does not exist on value of type 'C5'.
                        ~~~~
!!! unknownSymbols1.ts(30,21): error TS2095: Could not find symbol 'asdf'.
        }
    }